# temporal-python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPERS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: example-prompts.md  temporal-patterns.md  temporal-primitives.md  testing.md
src/workflows/http/: activities.py  activities_tests.py  http_activities_tests.py  http_workflow.py  http_workflow_tests.py  worker.py
src/workflows/load_generator/: load_generator_workflow.py
